<resources>
    <string name="app_name">TwitterJr.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="usuario">"@dummy123"</string>
    <string name="settings">Settings</string>
    <string name="likes">Likes</string>
    <string name="comment">Comments</string>
    <string name="about_us">About us</string>
    <string name="sign_out">Sign Out</string>
    <string name="tweet">I´m new to the GitHub, and trying to push my project to the GitHub from VCS of Android Studio.
        When I do this it commits and pushes only .java files and no other files like resources etc.</string>
    <string name="agregar">Nuevo Tweet</string>
    <string name="profile_like">Profile 2.0</string>
    <string name="usuario_like">"@gato321"</string>
    <string name="fecha">27/08/2018</string>
    <string name="hora">3:43 p.m.</string>
    <string name="comentario">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="strInitialHeader">Iniciar sesión en Twitter.</string>
    <string name="strUserHeader">Usuario</string>
    <string name="strPasswordHeader">Contraseña</string>
    <string name="strForgotYourPassword">¿Olvidaste tu contraseña?</string>
    <string name="strLoging">Inicia sesión</string>
    <string name="strLogingTitle">Regístrate</string>
    <string name="strNewAccount">Crea tu cuenta</string>
    <string name="strNameForNewAccount">Nombre</string>
    <string name="strEmailOrCellphone">Tel. o correo electrónico</string>
    <string name="strNextButton">Siguiente</string>
    <string name="strWhatHappendHint">¿Qué estás haciendo?</string>
    <string name="strCreateTweet">Twittear</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="remember">Remember me?</string>
    <string name="userCap">min. 4 characters</string>
    <string name="passwordCap">min. 6 characters</string>
</resources>
