<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/comment_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/gato"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_like"
                android:layout_marginTop="12dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/comment_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario_like"
                android:textSize="11sp"
                android:textStyle="italic"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/comment_comentario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comentario"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="14dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/fecha_hora_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:layout_marginStart="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:layout_marginStart="25dp"/>

    </LinearLayout>
</RelativeLayout>