<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp">

        <ImageView
            android:id="@+id/like_picture"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:src="@drawable/gato"
            />

        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_like"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/user_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario_like"
                android:textSize="15sp"
                android:textStyle="italic"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fecha_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:text="@string/fecha"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/hora_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hora"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>