<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/picture_user"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/perro" />

            <LinearLayout
                android:id="@+id/user_layout"
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingTop="14dp"
                    android:text="@string/profile"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/user_user"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:text="@string/usuario"
                    android:textSize="10sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tweet_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="5dp"
            android:text="@string/tweet"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/foto_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/perro"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/social_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/comentario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="20" />

                <TextView
                    android:id="@+id/seccion_comentarios"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/comment"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite" />

                <TextView
                    android:id="@+id/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="18" />

                <TextView
                    android:id="@+id/seccion_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/likes"
                    android:layout_marginStart="5dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>