<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:id="@+id/rv_footer_ll_detail_activity"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:orientation="horizontal"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rv_footer_picture_user"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                android:src="@drawable/perro"
                 android:layout_marginLeft="16dp"/>



            <TextView
                android:id="@+id/rv_footer_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="14dp"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_toRightOf="@id/rv_footer_picture_user"/>

            <TextView
                android:id="@+id/rv_footer_tvuserName"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/usuario"
                android:textSize="10sp"
                android:textStyle="italic"
                android:layout_below="@id/rv_footer_name_user"
                android:layout_toRightOf="@id/rv_footer_picture_user"/>




            <TextView
                android:id="@+id/rv_footer_tweet_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="5dp"
                android:text="@string/tweet"
                android:textSize="12sp"
                android:background="@android:color/white"
                android:layout_below="@id/rv_footer_tvuserName"
                android:layout_toRightOf="@id/rv_footer_picture_user"/>

            <LinearLayout
                android:id="@+id/rv_footer_linear_view"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/rv_footer_picture_user"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/rv_footer_tweet_view"
                android:layout_height="150dp">

                    <ImageView
                        android:id="@+id/rv_footer_image1"
                        android:scaleType="fitXY"
                        android:layout_weight="1"
                        android:src="@drawable/perro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />



            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>